a3/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
              name: mosquittoport1
            - containerPort: 8883
              name: mosquittoport2
          volumeMounts:
            - name: mosquitto-conf
              mountPath: /mosquitto/config
            - name: mosquitto-conf-cert
              mountPath: /mosquitto/config/certs
              readOnly: true
      volumes:
        - name: mosquitto-conf
          configMap:
            name: mosquitto-configmap
        - name: mosquitto-conf-cert
          configMap:
            name: mosquitto-cert-configmap
