a3/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      name: mosquittoport
      port: 8883
      targetPort: mosquittoport
