a3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-petclinic
  annotations:
    kubernetes.io/ingress.class: nginx       
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: mqtt.student474.rahtiapp.fi
    http:
     paths:
     - path: /
       backend:
        serviceName: mosquitto-service
        servicePort: 8883
