a3/mosquitto-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mosquitto-route
spec:
  host: mqtt.student474.rahtiapp.fi
  port:
    targetPort: 8883
  tls:
    termination: passthrough
  to:
    kind: Service
    name: mosquitto-service
    weight: 100
